--- a/app/src/main/res/layout/activity_settings_alert.xml
+++ b/app/src/main/res/layout/activity_settings_alert.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/onboarding_">
+    android:id="@+id/onboarding_"
+    tools:context=".ui.setting.SettingsAlertActivity">
 
     <TextView
-        android:id="@+id/alertSetting"
+        android:id="@+id/textview_alertSetting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="top"
@@ -22,28 +23,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.09" />
 
-    <FrameLayout
-        android:id="@+id/backButtonFrame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/alertSetting"
-        app:layout_constraintEnd_toStartOf="@+id/alertSetting"
+    <ImageButton
+        android:id="@+id/button_back"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@android:color/transparent"
+        android:clickable="false"
+        android:contentDescription="@string/blank_text"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_back"
+        app:layout_constraintBottom_toBottomOf="@+id/textview_alertSetting"
+        app:layout_constraintEnd_toStartOf="@+id/textview_alertSetting"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/alertSetting">
-
-        <ImageButton
-            android:id="@+id/backButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:background="@drawable/ic_back"
-            android:backgroundTint="@color/black"
-            android:contentDescription="gamza" />
-    </FrameLayout>
+        app:layout_constraintTop_toTopOf="@+id/textview_alertSetting" />
 
     <TextView
-        android:id="@+id/eventPushAlert"
+        android:id="@+id/textview_eventPushAlert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -53,32 +48,32 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alertSetting" />
+        app:layout_constraintTop_toBottomOf="@id/textview_alertSetting" />
 
     <TextView
-        android:id="@+id/eventPushAlertAdditional"
+        android:id="@+id/textview_eventPushAlertAdditional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/push_alert_add"
         android:textColor="@color/teal_700"
         android:textSize="10sp"
         android:fontFamily="@font/noto_sans_bold"
-        app:layout_constraintStart_toStartOf="@+id/eventPushAlert"
-        app:layout_constraintTop_toBottomOf="@+id/eventPushAlert" />
+        app:layout_constraintStart_toStartOf="@id/textview_eventPushAlert"
+        app:layout_constraintTop_toBottomOf="@id/textview_eventPushAlert" />
 
     <Switch
-        android:id="@+id/eventAndFunctionPushSwitch"
+        android:id="@+id/switch_eventAndFunctionPush"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:thumb="@drawable/switch_thumb"
         android:track="@drawable/selector_switch"
-        app:layout_constraintBottom_toBottomOf="@+id/eventPushAlert"
+        app:layout_constraintBottom_toBottomOf="@id/textview_eventPushAlert"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/eventPushAlertAdditional"
-        app:layout_constraintTop_toTopOf="@+id/eventPushAlert" />
+        app:layout_constraintStart_toEndOf="@id/textview_eventPushAlertAdditional"
+        app:layout_constraintTop_toTopOf="@id/textview_eventPushAlert" />
 
     <TextView
-        android:id="@+id/nightTimePushAlert"
+        android:id="@+id/textview_nightTimePushAlert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -87,29 +82,29 @@
         android:text="@string/night_time_alert"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/eventPushAlertAdditional"
-        app:layout_constraintTop_toBottomOf="@+id/eventPushAlertAdditional" />
+        app:layout_constraintStart_toStartOf="@id/textview_eventPushAlertAdditional"
+        app:layout_constraintTop_toBottomOf="@id/textview_eventPushAlertAdditional" />
 
     <TextView
-        android:id="@+id/nightTimePushAlertAdditional"
+        android:id="@+id/textview_nightTimePushAlertAdditional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/push_alert_add"
         android:textColor="@color/teal_700"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/nightTimePushAlert"
-        app:layout_constraintTop_toBottomOf="@+id/nightTimePushAlert" />
+        app:layout_constraintStart_toStartOf="@id/textview_nightTimePushAlert"
+        app:layout_constraintTop_toBottomOf="@id/textview_nightTimePushAlert" />
 
     <Switch
-        android:id="@+id/nightTimePushAlertSwitch"
+        android:id="@+id/switch_nightTimePushAlert"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:thumb="@drawable/switch_thumb"
         android:track="@drawable/selector_switch"
-        app:layout_constraintBottom_toBottomOf="@+id/nightTimePushAlert"
+        app:layout_constraintBottom_toBottomOf="@id/textview_nightTimePushAlert"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/nightTimePushAlertAdditional"
-        app:layout_constraintTop_toTopOf="@+id/nightTimePushAlert"/>
+        app:layout_constraintStart_toEndOf="@id/textview_nightTimePushAlertAdditional"
+        app:layout_constraintTop_toTopOf="@id/textview_nightTimePushAlert"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
