--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="main_theme_blue">#1DB9DB</color>
     <color name="general_theme_error">#B3261E</color>
     <color name="main_theme_subblue">#70A2A7</color>
-    <color name="gray">#7d000000</color>
+    <color name="main_theme_gray">#6E6E6E</color>
 </resources>
