--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="main_subwhite">#F0F0F0</color>
     <color name="general_theme_error">#B3261E</color>
     <color name="gray">#7d000000</color>
+    <color name="gray_light">#D9D9D9</color>
 </resources>
