[REFACTOR] 불필요한 layout 제거

--- a/app/src/main/res/layout/activity_problem_category.xml
+++ b/app/src/main/res/layout/activity_problem_category.xml
@@ -1,55 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_theme_blue" >
+    android:background="@color/main_theme_blue">
 
-    <FrameLayout
+    <ImageButton
         android:id="@+id/field_button_back"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
+        android:backgroundTint="@android:color/transparent"
+        android:clickable="false"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_back"
-            android:clickable="false" />
-
-    </FrameLayout>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosanskr_medium"
         android:includeFontPadding="false"
+        android:text="@string/whatis_problem"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:text="@string/whatis_problem"
-        app:layout_constraintVertical_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/group_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/group_button" />
+        app:layout_constraintVertical_bias="0.6" />
 
     <!-- 버튼 그리드 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/group_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintVertical_bias="0.45">
 
         <!-- 전원 문제 버튼 -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,17 +52,17 @@
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_power"
-                app:layout_constraintVertical_bias="0.625"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/text_power"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text_power"/>
+                app:layout_constraintVertical_bias="0.625" />
 
             <TextView
                 android:id="@+id/text_power"
@@ -78,14 +70,14 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosanskr_medium"
                 android:includeFontPadding="false"
+                android:text="@string/prob_power"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:text="@string/prob_power"
-                app:layout_constraintVertical_bias="0.85"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintVertical_bias="0.85" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 화면 문제 버튼 -->
@@ -96,19 +88,19 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
-            app:layout_constraintStart_toEndOf="@id/button_power_prob"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintStart_toEndOf="@id/button_power_prob"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_display"
-                app:layout_constraintVertical_bias="0.625"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/text_display"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text_display"/>
+                app:layout_constraintVertical_bias="0.625" />
 
             <TextView
                 android:id="@+id/text_display"
@@ -116,14 +108,14 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosanskr_medium"
                 android:includeFontPadding="false"
+                android:text="@string/prob_display"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:text="@string/prob_display"
-                app:layout_constraintVertical_bias="0.85"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintVertical_bias="0.85" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 사용 문제 버튼 -->
@@ -134,19 +126,19 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_power_prob"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/button_power_prob">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_usage"
-                app:layout_constraintVertical_bias="0.625"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/text_use"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text_use"/>
+                app:layout_constraintVertical_bias="0.625" />
 
             <TextView
                 android:id="@+id/text_use"
@@ -154,14 +146,14 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosanskr_medium"
                 android:includeFontPadding="false"
+                android:text="@string/prob_use"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:text="@string/prob_use"
-                app:layout_constraintVertical_bias="0.85"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintVertical_bias="0.85" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 주변기기 문제 버튼 -->
@@ -172,20 +164,20 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
-            app:layout_constraintStart_toEndOf="@id/button_use_prob"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_power_prob"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toEndOf="@id/button_use_prob"
+            app:layout_constraintTop_toBottomOf="@id/button_power_prob">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_acc"
-                app:layout_constraintVertical_bias="0.625"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/text_acc"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text_acc"/>
+                app:layout_constraintVertical_bias="0.625" />
 
             <TextView
                 android:id="@+id/text_acc"
@@ -193,14 +185,14 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosanskr_medium"
                 android:includeFontPadding="false"
+                android:text="@string/prob_acc"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:text="@string/prob_acc"
-                app:layout_constraintVertical_bias="0.85"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintVertical_bias="0.85" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -210,45 +202,45 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosanskr_regular"
         android:includeFontPadding="false"
-        android:textColor="@color/main_theme_gray"
-        android:textAlignment="center"
-        android:textSize="12sp"
         android:text="@string/windows"
-        app:layout_constraintVertical_bias="0.27"
+        android:textAlignment="center"
+        android:textColor="@color/main_theme_gray"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/button_ask"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/group_button"
-        app:layout_constraintBottom_toTopOf="@id/button_ask" />
+        app:layout_constraintVertical_bias="0.27" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosanskr_regular"
         android:includeFontPadding="false"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        android:textSize="12sp"
         android:text="@string/contact_ttukttak"
-        app:layout_constraintVertical_bias="0.8"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/button_ask"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/group_button"
-        app:layout_constraintBottom_toTopOf="@id/button_ask" />
-    
+        app:layout_constraintVertical_bias="0.8" />
+
     <Button
         android:id="@+id/button_ask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:background="@drawable/bg_rectangle_round"
-        app:backgroundTint="@color/gray_light"
         android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
+        android:text="@string/ask"
         android:textColor="@color/main_theme_blue"
         android:textSize="18sp"
-        android:text="@string/ask"
-        app:layout_constraintVertical_bias="0.5"
+        app:backgroundTint="@color/gray_light"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/group_button"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
