--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -57,25 +57,17 @@
         app:layout_constraintStart_toStartOf="@+id/button_back"
         app:layout_constraintTop_toBottomOf="@id/textview_joinMembership" />
 
-    <LinearLayout
-        android:id="@+id/layout_joinEmail"
+    <EditText
+        android:id="@+id/edittext_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/box_white"
-        android:orientation="horizontal"
+        android:hint="@string/user_email"
+        android:inputType="textEmailAddress"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_joinEmail">
-
-        <EditText
-            android:id="@+id/edittext_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/user_email"
-            android:inputType="textEmailAddress" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/textview_joinEmail" />
 
     <TextView
         android:id="@+id/textview_overlapEmail"
@@ -86,8 +78,8 @@
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/layout_joinEmail"
-        app:layout_constraintTop_toBottomOf="@+id/layout_joinEmail" />
+        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
 
     <Button
         android:id="@+id/button_certificationCode"
@@ -99,9 +91,9 @@
         android:textSize="18sp"
         android:fontFamily="@font/noto_sans_bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/layout_joinEmail"
-        app:layout_constraintStart_toStartOf="@+id/layout_joinEmail"
-        app:layout_constraintTop_toBottomOf="@+id/layout_joinEmail" />
+        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
+        app:layout_constraintStart_toStartOf="@+id/edittext_email"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
