--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.join.JoinPart3Activity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.join.JoinPart3Activity">
 
     <View
         android:id="@+id/view_progressBar"
@@ -48,33 +47,25 @@
         android:id="@+id/textview_joinUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="131dp"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/join_user_name"
         android:textColor="@color/black"
         android:textSize="14sp"
-        android:layout_marginTop="131dp"
         app:layout_constraintStart_toStartOf="@+id/button_back"
         app:layout_constraintTop_toBottomOf="@+id/button_back" />
 
-    <LinearLayout
-        android:id="@+id/layout_joinName"
+    <EditText
+        android:id="@+id/edittext_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/box_white"
-        android:orientation="horizontal"
-        android:padding="15dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/box_white"
+        android:hint="@string/user_name"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_joinUserName">
-
-        <EditText
-            android:id="@+id/edittext_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/user_name" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/textview_joinUserName" />
 
     <TextView
         android:id="@+id/textview_overlapName"
@@ -85,8 +76,8 @@
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@id/layout_joinName"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinName" />
+        app:layout_constraintEnd_toEndOf="@id/edittext_name"
+        app:layout_constraintTop_toBottomOf="@id/edittext_name" />
 
     <TextView
         android:id="@+id/textview_invalidName"
@@ -97,8 +88,8 @@
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@id/layout_joinName"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinName" />
+        app:layout_constraintEnd_toEndOf="@id/edittext_name"
+        app:layout_constraintTop_toBottomOf="@id/edittext_name" />
 
     <TextView
         android:id="@+id/textview_joinUserPassword"
@@ -110,41 +101,34 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/textview_joinUserName"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinName" />
+        app:layout_constraintTop_toBottomOf="@id/edittext_name" />
 
-    <LinearLayout
-        android:id="@+id/layout_joinPassword"
+    <EditText
+        android:id="@+id/edittext_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/box_white"
-        android:orientation="horizontal"
         android:layout_marginTop="8dp"
+        android:background="@drawable/box_white"
+        android:hint="@string/pw"
+        android:orientation="horizontal"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_joinUserPassword">
-
-        <EditText
-            android:id="@+id/edittext_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/pw" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/textview_joinUserPassword" />
 
     <TextView
         android:id="@+id/textview_passwordRule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/password_rule"
         android:textColor="@color/black"
         android:textSize="12sp"
-        android:layout_marginTop="5dp"
         android:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinPassword"
-        app:layout_constraintEnd_toEndOf="@+id/layout_joinPassword"
-        app:layout_constraintStart_toStartOf="@+id/layout_joinPassword" />
+        app:layout_constraintEnd_toEndOf="@id/edittext_password"
+        app:layout_constraintStart_toStartOf="@+id/edittext_password"
+        app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
     <TextView
         android:id="@+id/textview_passwordUsable"
@@ -154,9 +138,9 @@
         android:text="@string/password_usable"
         android:textColor="@color/main_theme_subcyan"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinPassword"
-        app:layout_constraintEnd_toEndOf="@+id/layout_joinPassword"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
+        app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
     <TextView
         android:id="@+id/textview_passwordError"
@@ -166,29 +150,21 @@
         android:text="@string/password_error"
         android:textColor="@color/general_theme_error"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinPassword"
-        app:layout_constraintEnd_toEndOf="@+id/layout_joinPassword"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@id/edittext_password"
+        app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
-    <LinearLayout
-        android:id="@+id/layout_passwordCheck"
-        android:layout_width="0dp"
+    <EditText
+        android:id="@+id/edittext_passwordCheck"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/box_white"
-        android:orientation="horizontal"
-        android:padding="15dp"
         android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_joinPassword"
-        app:layout_constraintEnd_toEndOf="@id/layout_joinPassword"
-        app:layout_constraintStart_toStartOf="@id/layout_joinPassword">
-
-        <EditText
-            android:id="@+id/edittext_passwordCheck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/password_check" />
-    </LinearLayout>
+        android:background="@drawable/box_white"
+        android:hint="@string/password_check"
+        android:padding="15dp"
+        app:layout_constraintEnd_toEndOf="@id/edittext_password"
+        app:layout_constraintStart_toStartOf="@id/edittext_password"
+        app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
     <Button
         android:id="@+id/button_join"
@@ -201,17 +177,17 @@
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/layout_passwordCheck"
-        app:layout_constraintStart_toStartOf="@+id/layout_passwordCheck"
-        app:layout_constraintTop_toBottomOf="@+id/layout_passwordCheck" />
+        app:layout_constraintEnd_toEndOf="@+id/edittext_passwordCheck"
+        app:layout_constraintStart_toStartOf="@+id/edittext_passwordCheck"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_passwordCheck" />
 
     <LinearLayout
         android:id="@+id/layout_alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="@drawable/box_alert"
-        android:visibility="visible"
+        android:orientation="vertical"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -225,13 +201,13 @@
                 android:id="@+id/textview_agreeTerms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="@color/black"
                 android:layout_marginStart="33.5dp"
-                android:textSize="17sp"
+                android:layout_weight="1"
                 android:fontFamily="@font/noto_sans_bold"
-                android:text="@string/agree_terms" />
+                android:gravity="center"
+                android:text="@string/agree_terms"
+                android:textColor="@color/black"
+                android:textSize="17sp" />
 
             <RadioButton
                 android:id="@+id/radiobutton_agreeTerms"
@@ -244,9 +220,9 @@
             android:id="@+id/layout_serviceTerms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/box_service_terms"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="15dp"
+            android:background="@drawable/box_service_terms">
 
             <LinearLayout
                 android:id="@+id/layout_serviceTermsGroup"
@@ -280,6 +256,7 @@
                         android:layout_marginStart="84dp"
                         android:layout_marginEnd="9dp" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/layout_promoteTerms"
                     android:layout_width="match_parent"
@@ -290,13 +267,13 @@
                         android:id="@+id/textview_promoteTerms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:textColor="@color/black"
                         android:layout_marginStart="18.5dp"
-                        android:textSize="12sp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/noto_sans_bold"
-                        android:text="@string/service_promote_terms" />
+                        android:gravity="center"
+                        android:text="@string/service_promote_terms"
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
 
                     <RadioButton
                         android:id="@+id/radiobutton_promoteTerms"
@@ -307,16 +284,19 @@
                 </LinearLayout>
             </LinearLayout>
         </FrameLayout>
+
         <Button
             android:id="@+id/button_start"
             android:layout_width="318dp"
             android:layout_height="56dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/main_theme_blue"
             android:fontFamily="@font/noto_sans_bold"
             android:text="@string/start"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center" />
+            android:textSize="18sp" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
