--- a/app/src/main/res/layout/activity_terms_use.xml
+++ b/app/src/main/res/layout/activity_terms_use.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.terms.TermsUseActivity"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.terms.TermsUseActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,23 +17,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/layout_back"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <ImageButton
+                android:id="@+id/button_back"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="60dp"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/button_back"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:backgroundTint="@android:color/transparent"
-                    android:contentDescription="@string/blank_text"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/ic_back" />
-            </LinearLayout>
+                android:backgroundTint="@android:color/transparent"
+                android:contentDescription="@string/blank_text"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_back" />
 
             <ImageView
                 android:id="@+id/imageview_logo"
