[Refactor] 약관 layout 추출 - 추가) dialog_alert 대신 dialog_email로 이름 변경

--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -145,7 +145,7 @@
 
     <include
         android:id="@+id/layout_alert"
-        layout="@layout/dialog_alert"
+        layout="@layout/dialog_email"
         android:layout_width="0dp"
         android:layout_height="260dp"
         android:visibility="invisible"
