--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -181,122 +181,14 @@
         app:layout_constraintStart_toStartOf="@+id/edittext_passwordCheck"
         app:layout_constraintTop_toBottomOf="@+id/edittext_passwordCheck" />
 
-    <LinearLayout
+    <include
         android:id="@+id/layout_alert"
-        android:layout_width="match_parent"
+        layout="@layout/dialog_agree_terms"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/box_alert"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <LinearLayout
-            android:id="@+id/layout_usePromoteTerms"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textview_agreeTerms"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="33.5dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/noto_sans_bold"
-                android:gravity="center"
-                android:text="@string/agree_terms"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-
-            <RadioButton
-                android:id="@+id/radiobutton_agreeTerms"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp" />
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/layout_serviceTerms"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/box_service_terms">
-
-            <LinearLayout
-                android:id="@+id/layout_serviceTermsGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/layout_useTerms"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textview_useTerms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="18.5dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/noto_sans_bold"
-                        android:gravity="center"
-                        android:text="@string/service_use_terms"
-                        android:textColor="@color/black"
-                        android:textSize="12sp" />
-
-                    <RadioButton
-                        android:id="@+id/radiobutton_useTerms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="84dp"
-                        android:layout_marginEnd="9dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layout_promoteTerms"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textview_promoteTerms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="18.5dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/noto_sans_bold"
-                        android:gravity="center"
-                        android:text="@string/service_promote_terms"
-                        android:textColor="@color/black"
-                        android:textSize="12sp" />
-
-                    <RadioButton
-                        android:id="@+id/radiobutton_promoteTerms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="84dp"
-                        android:layout_marginEnd="9dp" />
-                </LinearLayout>
-            </LinearLayout>
-        </FrameLayout>
-
-        <Button
-            android:id="@+id/button_start"
-            android:layout_width="318dp"
-            android:layout_height="56dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/main_theme_blue"
-            android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/start"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
