--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -133,7 +133,7 @@
         android:id="@+id/button_certification"
         android:layout_width="318dp"
         android:layout_height="56dp"
-        android:backgroundTint="#d8d8d8"
+        android:backgroundTint="@color/main_theme_lightgray"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/certification"
         android:textColor="@color/main_theme_gray"
