--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -170,7 +170,7 @@
         android:id="@+id/button_join"
         android:layout_width="318dp"
         android:layout_height="56dp"
-        android:backgroundTint="#d8d8d8"
+        android:backgroundTint="@color/main_theme_lightgray"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/join"
         android:textColor="@color/main_theme_gray"
