--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="main_theme_blue">#1DB9DB</color>
     <color name="main_theme_subblue">#70A2A7</color>
     <color name="main_theme_gray">#6E6E6E</color>
-
+    <color name="main_theme_lightgray">#DBD8D8</color>
     <color name="main_theme_subcyan">#327A81</color>
 
     <color name="main_subwhite">#F0F0F0</color>
