--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -166,16 +166,12 @@
         app:layout_constraintStart_toStartOf="@id/edittext_password"
         app:layout_constraintTop_toBottomOf="@id/edittext_password" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_join"
+        style="@style/TtuckTtakButton"
         android:layout_width="318dp"
-        android:layout_height="56dp"
-        android:backgroundTint="@color/main_theme_lightgray"
-        android:fontFamily="@font/noto_sans_bold"
+        android:layout_height="wrap_content"
         android:text="@string/join"
-        android:textColor="@color/main_theme_gray"
-        android:textSize="18sp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/edittext_passwordCheck"
         app:layout_constraintStart_toStartOf="@+id/edittext_passwordCheck"
@@ -186,7 +182,7 @@
         layout="@layout/dialog_agree_terms"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
