--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -88,17 +88,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_start"
+        style="@style/TtuckTtakButton"
         android:layout_width="318dp"
         android:layout_height="56dp"
-        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/main_theme_blue"
-        android:fontFamily="@font/noto_sans_bold"
         android:text="@string/start"
-        android:textColor="@color/white"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout_serviceTerms" />
